--- a/web/css/novelInfo.css
+++ b/web/css/novelInfo.css
@@ -119,6 +119,8 @@ textarea{
 }
 .rating img{
     width: 15px;
+}
+.rating label img{
     cursor: pointer;
 }
 .rating .rate{
@@ -128,9 +130,6 @@ textarea{
     transform: rotate(15deg) scale(1.3);
 }
 
-
-.submit-rating{
-}
 @media (max-width:600px){
     .main-content{
     width: 100%;
