--- a/web/css/main.css
+++ b/web/css/main.css
@@ -326,6 +326,10 @@ input[type="submit"]:hover{
         font-size: 15px;
     }
     .tooltip:hover .text{display:none}
+    .showdescription{
+    display: none;
+
+}
 }
 @media only screen and (max-width : 768px) {
 	.item,.image {
