--- a/web/css/searchList.css
+++ b/web/css/searchList.css
@@ -107,7 +107,7 @@
 
 .item{
     width: 100%;
-    height: 185px;
+    height: 190px;
     float: none;
     text-align: initial;
 }
@@ -116,6 +116,7 @@
     width: 40%;
     height: 180px;
     border: 1px solid black;
+    float: left;
 }
 .genre-description{
     display: none;
@@ -129,7 +130,7 @@
 }
 .book-info{
     display: block;
-    font-size: 17px;
+    font-size: 15px;
 }
 .name{
     font-size: 17px;
@@ -138,6 +139,8 @@
 .info-wraper{
     float: right;
     width: 55%;
+    margin-left: 12px;
 }
+
 
 }
